Fix header spacing | .logs max-width

--- a/res/styles/header.css
+++ b/res/styles/header.css
@@ -65,6 +65,6 @@ ul li a:hover{
 }
 
 .logs{
-    max-width: 1500px;
-    margin: auto;
+    max-width: 1840px;
+    margin: 10px auto;
 }
